--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalabel=no">
-    <title>yes</title>
+    <title>饿了么</title>
     <!-- 初始化样式 -->
     <link rel="stylesheet" href="static/reset.css">
   </head>
